// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xstate-component-tree should read a value from meta.component 1`] = `
Map {
  "one" => Array [
    Object {
      "child": "one",
      "props": Object {},
    },
  ],
}
`;

exports[`xstate-component-tree should read a value from meta.load 1`] = `
Map {
  "one" => Array [
    Object {
      "child": "one",
      "props": Object {},
    },
  ],
}
`;

exports[`xstate-component-tree should read values from meta.component 1`] = `
Map {
  "one" => Array [
    Object {
      "child": "one",
      "props": Object {},
    },
    Object {
      "child": "child",
      "props": Object {},
    },
  ],
}
`;

exports[`xstate-component-tree should read values from meta.component 2`] = `
Map {
  "one" => Array [
    Object {
      "child": "one",
      "props": Object {},
    },
    Object {
      "child": "child",
      "props": Object {},
    },
  ],
}
`;

exports[`xstate-component-tree should wait for all load() functions to resolve 1`] = `
Map {
  "one" => Array [
    Object {
      "child": "one",
      "props": Object {},
    },
    Object {
      "child": "child",
      "props": Object {},
    },
  ],
}
`;
